# mallcop-py

./: README.md  pyproject.toml
src/mallcop/: cli.py
