[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mallcop"
version = "0.5.1"
description = "Security monitoring for small cloud operators"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "defusedxml>=0.7",
    "pyyaml>=6.0",
    "regex>=2024.0",
    "requests>=2.28",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.28",
]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.scripts]
mallcop = "mallcop.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mallcop = ["models.yaml", "actors/*/manifest.yaml", "actors/*/POST.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: requires real API credentials (ANTHROPIC_API_KEY, AZURE_*)",
    "shakedown: shakedown scenario tests (requires LLM access)",
    "academy_exam: Academy Exam scenario tests — alias for shakedown (requires LLM access)",
    "stability: stability tests — run 3x per scenario (set SHAKEDOWN_STABILITY=1)",
    "integration: integration tests that use real actor runtime with mock LLMs (no API key needed)",
    "install_push: installation path tests, runs on every push to main",
    "install_prerelease: installation path tests, runs on pre-release only",
    "functional: functional tests exercising CLI commands end-to-end with mocked externals",
]
